--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,20 +1,24 @@
 .nav {
+  margin: 20px 0 20px 0;
   height: 50px;
-  padding: 10px;
+  padding: 0px;
   background: #000;
   color: #fff;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .nav ul {
+  padding: 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   list-style: none;
 }
 
-.nav ul li a {
-  margin: 5px 15px;
+.nav ul li {
+  margin-top: 10px;
 }
