--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,13 @@
+@font-face {
+  font-family: "cochin";
+  src: url("/cochin.ttc");
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: cochin, Baskerville, Georgia, Times, "Times New Roman", serif;
   background-color: #000;
   color: #fff;
 }
