Update landing page styling and navigation

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,14 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
+a:focus {
+  text-decoration: underline;
+}
+
 * {
   box-sizing: border-box;
 }
