--- a/styles/LandingPage.module.css
+++ b/styles/LandingPage.module.css
@@ -8,3 +8,15 @@
 .enter {
   margin-top: 40px;
 }
+
+.animation {
+  width: 300px;
+  height: 300px;
+}
+
+@media screen and (min-width: 600px) {
+  .animation {
+    width: 500px;
+    height: 500px;
+  }
+}
