--- a/styles/Homepage.module.css
+++ b/styles/Homepage.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  padding: 0;
+  padding: 50px 0 50px 0;
   margin: 0;
 }
 
