--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -2,11 +2,12 @@
   margin: 20px 0 20px 0;
   height: 50px;
   padding: 0px;
-  background: #000;
   color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  top: 0;
 }
 
 .nav ul {
